# agentverse

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.prebuilt  README.md  README_zh.md  docker-compose.openclaw-e2e.yml  docker-compose.yml  install.ps1  install.sh  justfile  release-please-config.json  release-plz.toml  vx.toml
.github/workflows/: ci.yml  docker-publish.yml  docs.yml  e2e-api.yml  e2e-cli.yml  e2e-memory.yml  e2e-openclaw.yml  helm-publish.yml  release-please.yml  release.yml  sync-skills.yml
apps/cli/: Cargo.toml
apps/cli/src/: client.rs  config.rs  main.rs  memory.rs
apps/cli/src/commands/: benchmark.rs  deprecate.rs  fork.rs  get.rs  install.rs  learn.rs  list.rs  login.rs  memory.rs  mod.rs  publish.rs  register.rs  search.rs  self_update.rs  social.rs  update.rs  versions.rs  whoami.rs
apps/server/: Cargo.toml
apps/server/src/: main.rs
charts/agentverse/: Chart.yaml  values.yaml
charts/agentverse/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml
config/: default.toml
crates/agentverse-api/: Cargo.toml
crates/agentverse-api/src/: error.rs  extractors.rs  lib.rs  mcp.rs  state.rs
crates/agentverse-api/src/routes/: artifacts.rs  auth.rs  health.rs  mod.rs  skills.rs  social.rs  versions.rs
crates/agentverse-api/tests/: api_tests.rs  e2e_lifecycle_tests.rs  mcp_tests.rs  memory_e2e_tests.rs  skills_e2e_tests.rs
crates/agentverse-api/tests/common/: mod.rs
crates/agentverse-auth/: Cargo.toml
crates/agentverse-auth/src/: jwt.rs  lib.rs  password.rs  signing.rs
crates/agentverse-auth/tests/: auth_tests.rs
crates/agentverse-core/: Cargo.toml
crates/agentverse-core/src/: artifact.rs  error.rs  lib.rs  memory.rs  repository.rs  skill.rs  social.rs  user.rs  versioning.rs
crates/agentverse-core/tests/: versioning_tests.rs
crates/agentverse-events/: Cargo.toml
crates/agentverse-events/src/: lib.rs  sink.rs  store.rs  types.rs
crates/agentverse-search/: Cargo.toml
crates/agentverse-search/src/: fulltext.rs  lib.rs  result.rs  semantic.rs
crates/agentverse-skills/: Cargo.toml
crates/agentverse-skills/src/: error.rs  lib.rs  skill_md.rs
crates/agentverse-skills/src/backends/: clawhub.rs  github.rs  github_repo.rs  mod.rs  url.rs
crates/agentverse-skills/src/deploy/: mod.rs  paths.rs
crates/agentverse-skills/src/hooks/: mod.rs
crates/agentverse-social/: Cargo.toml
crates/agentverse-storage/: Cargo.toml
crates/agentverse-storage/src/: connection.rs  lib.rs
crates/agentverse-storage/src/entities/: agent_interaction.rs  artifact.rs  artifact_version.rs  comment.rs  event.rs  like.rs  mod.rs  prelude.rs  rating.rs  skill_install.rs  skill_package.rs  user.rs
crates/agentverse-storage/src/object_store/: config.rs  error.rs  mod.rs
crates/agentverse-storage/src/object_store/backends/: bkrepo.rs  custom.rs  github_release.rs  local.rs  mod.rs  s3.rs
crates/agentverse-storage/src/repositories/: artifact.rs  mod.rs  skill_package.rs  social.rs  user.rs  version.rs
crates/agentverse-updater/: Cargo.toml
crates/agentverse-updater/src/: lib.rs
crates/agentverse-versioning/: Cargo.toml
docs/: deployment.md  index.md  package-lock.json  package.json  usage.md
docs/.vitepress/: config.ts
docs/cli/: agent.md  auth.md  configuration.md  discovery.md  index.md  installation.md  publishing.md  social.md
docs/guide/: introduction.md  quick-start.md
docs/manifest/: agent.md  agent_zh.md  format.md  format_zh.md  prompt.md  prompt_zh.md  soul.md  soul_zh.md  workflow.md  workflow_zh.md
docs/server/: api.md  configuration.md  deployment.md  index.md
docs/storage/: bk-repo.md  custom.md  github-releases.md  index.md  local.md  s3-compatible.md
migrations/: 001_initial_schema.sql  002_social_schema.sql  003_ratings_unique.sql  004_likes_unique.sql  005_skill_packages.sql  006_add_github_repo_source.sql  007_source_type_to_text.sql  008_agent_memory_schema.sql
scripts/: openclaw_e2e.sh
skills/agent-code-assistant/: SKILL.md
skills/agentverse-openclaw/: README.md  SKILL.md  skill.json
skills/api-smoke-tester/: SKILL.md
skills/code-reviewer/: SKILL.md
skills/docker-compose-manager/: SKILL.md
skills/gh-pr-reviewer/: SKILL.md
skills/jq-processor/: SKILL.md
skills/prompt-chain-of-thought/: SKILL.md
skills/release-notes-writer/: SKILL.md
skills/ripgrep-search/: SKILL.md
skills/soul-empathetic-counselor/: SKILL.md
skills/workflow-ci-review-pipeline/: SKILL.md
