[package]
name = "agentverse"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "agentverse"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
uuid = { workspace = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"], default-features = false }
clap = { version = "4", features = ["derive", "env"] }
chrono = { workspace = true }
agentverse-core = { workspace = true }
agentverse-skills = { workspace = true }
agentverse-updater = { workspace = true }
colored = "2"
indicatif = "0.17"
toml = { workspace = true }
rpassword = "7"
dirs-next = "2"
