[package]
name = "agentverse-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
agentverse-core = { workspace = true }
agentverse-versioning = { workspace = true }
agentverse-auth = { workspace = true }
agentverse-events = { workspace = true }
agentverse-search = { workspace = true }
agentverse-skills = { workspace = true }

axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
validator = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
sha2 = "0.10"
semver = { workspace = true }

[dev-dependencies]
http-body-util = "0.1"
sea-orm = { workspace = true }
agentverse-storage = { workspace = true }
tower = { version = "0.5", features = ["util"] }
tokio = { version = "1", features = ["full"] }
zip = { workspace = true }
tempfile = { workspace = true }
