[package]
name = "agentverse-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
semver = { workspace = true }
async-trait = { workspace = true }
validator = { workspace = true }
