[package]
name = "agentverse-search"
version.workspace = true
edition.workspace = true

[dependencies]
agentverse-core = { workspace = true }
agentverse-storage = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
sea-orm = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }

