[package]
name = "agentverse-updater"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Shared self-update logic for agentverse binaries"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.13", features = ["json", "rustls-tls"], default-features = false }
tracing = { workspace = true }

